unpackaged/main/default/objects/Medallia_Staging__c/fields/Speed_of_Service_Restaurant_12__c.field-meta.xml
<CustomField>
    <fullName>Speed_of_Service_Restaurant_12__c</fullName>
    <label>Speed of Service Restaurant 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>