unpackaged/main/default/objects/Medallia_Staging__c/fields/Staff_s_Knowledge_of_the_Resort_1__c.field-meta.xml
<CustomField>
    <fullName>Staff_s_Knowledge_of_the_Resort_1__c</fullName>
    <label>Staff&#39;s Knowledge of the Resort 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>