unpackaged/main/default/objects/Medallia_Staging__c/fields/Staffs_Knowledge_of_the_Resort__c.field-meta.xml
<CustomField>
    <fullName>Staffs_Knowledge_of_the_Resort__c</fullName>
    <label>Staff&#39;s Knowledge of the Resort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>