unpackaged/main/default/objects/Medallia_Staging__c/fields/Suggestions_to_help_improve__c.field-meta.xml
<CustomField>
    <fullName>Suggestions_to_help_improve__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suggestions to help improve</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>