unpackaged/main/default/objects/Medallia_Staging__c/fields/Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Survey_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Survey ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>