unpackaged/main/default/objects/Medallia_Staging__c/fields/Survey_Response_Medallia_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_Medallia_URL__c</fullName>
    <description>This will be a read only field, and will contain the Medallia URL for the Survey Response Record in Medallia.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Click on this link to open Survey Response in Medallia.</inlineHelpText>
    <label>Survey Response Medallia URL</label>
    <type>Url</type>
</CustomField>