unpackaged/main/default/objects/Medallia_Staging__c/fields/Table_Games_Cleanliness_of_Area__c.field-meta.xml
<CustomField>
    <fullName>Table_Games_Cleanliness_of_Area__c</fullName>
    <label>Cleanliness of Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>