unpackaged/main/default/objects/Medallia_Staging__c/fields/Table_Games_Energy_and_Excitement_of_A__c.field-meta.xml
<CustomField>
    <fullName>Table_Games_Energy_and_Excitement_of_A__c</fullName>
    <label>Energy and Excitement of Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>