unpackaged/main/default/objects/Medallia_Staging__c/fields/Table_Games_Friendliness_and_Professio__c.field-meta.xml
<CustomField>
    <fullName>Table_Games_Friendliness_and_Professio__c</fullName>
    <label>Friendliness and Professionalism</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>