unpackaged/main/default/objects/Medallia_Staging__c/fields/Table_Games_Speed_of_Service_or_Pace_o__c.field-meta.xml
<CustomField>
    <fullName>Table_Games_Speed_of_Service_or_Pace_o__c</fullName>
    <label>Speed of Service or Pace of Game</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>