unpackaged/main/default/objects/Medallia_Staging__c/fields/Team_Member_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Knowledge__c</fullName>
    <label>Team Member Knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>