unpackaged/main/default/objects/Medallia_Staging__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>XCARD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>