unpackaged/main/default/objects/Medallia_Staging__c/fields/To_be_Contacted_Email__c.field-meta.xml
<CustomField>
    <fullName>To_be_Contacted_Email__c</fullName>
    <label>To be Contacted : Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>