unpackaged/main/default/objects/Medallia_Staging__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>