unpackaged/main/default/objects/Medallia_Staging__c/fields/Used_Players_Club__c.field-meta.xml
<CustomField>
    <fullName>Used_Players_Club__c</fullName>
    <label>Used Player&#39;s Club</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>