unpackaged/main/default/objects/Medallia_Staging__c/fields/Used_the_Cashier__c.field-meta.xml
<CustomField>
    <fullName>Used_the_Cashier__c</fullName>
    <label>Used the Cashier?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>