unpackaged/main/default/objects/Medallia_Staging__c/fields/Using_a_search_engine_or_map_application__c.field-meta.xml
<CustomField>
    <fullName>Using_a_search_engine_or_map_application__c</fullName>
    <label>Using a search engine or map application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>