unpackaged/main/default/objects/Medallia_Staging__c/fields/Wait_or_Line__c.field-meta.xml
<CustomField>
    <fullName>Wait_or_Line__c</fullName>
    <label>Wait or Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>