unpackaged/main/default/objects/Medallia_Staging__c/fields/Was_agent_friendly_and_helpful__c.field-meta.xml
<CustomField>
    <fullName>Was_agent_friendly_and_helpful__c</fullName>
    <label>Was agent friendly and helpful</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>