unpackaged/main/default/objects/Medallia_Staging__c/fields/Was_the_agent_knowledgeable__c.field-meta.xml
<CustomField>
    <fullName>Was_the_agent_knowledgeable__c</fullName>
    <label>Was the agent knowledgeable?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>