unpackaged/main/default/objects/Medallia_Staging__c/fields/What_are_the_teams_that_feedback_can_be__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_teams_that_feedback_can_be__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>What are the teams that feedback can be</label>
    <length>80000</length>
    <type>LongTextArea</type>
</CustomField>