unpackaged/main/default/objects/Medallia_Staging__c/fields/Wild_Card_Center__c.field-meta.xml
<CustomField>
    <fullName>Wild_Card_Center__c</fullName>
    <label>Wild Card Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>