unpackaged/main/default/objects/Medallia_Staging__c/fields/Wingcode__c.field-meta.xml
<CustomField>
    <fullName>Wingcode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Wingcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>