unpackaged/main/default/objects/Medallia_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Record_Type_Seminole__c</columns>
    <columns>Survey_ID__c</columns>
    <columns>Email__c</columns>
    <columns>Property__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Responsedate__c</columns>
    <columns>Problem_Area__c</columns>
    <columns>Action_Taken__c</columns>
    <columns>Appeasement_Comp_Dollars__c</columns>
    <columns>What_are_the_teams_that_feedback_can_be__c</columns>
    <columns>Alert_type__c</columns>
    <columns>Current_status_of_alert__c</columns>
    <columns>Alert_owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>